--- a/InputUnlocker/InputUnlocker.csproj
+++ b/InputUnlocker/InputUnlocker.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Reference Include="BepInEx">
       <HintPath>..\lib\BepInEx.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
