--- a/ScriptEngine/packages.config
+++ b/ScriptEngine/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ILMerge" version="2.13.0307" targetFramework="net35" />
   <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net35" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net35" />
 </packages>
