--- a/ResourceRedirector/ResourceRedirector.csproj
+++ b/ResourceRedirector/ResourceRedirector.csproj
@@ -46,9 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetLoader.cs" />
+    <Compile Include="ListLoader.cs" />
     <Compile Include="Loaders\BGMLoader.cs" />
     <Compile Include="Hooks.cs" />
     <Compile Include="Loaders\IntroVoiceClipLoader.cs" />
+    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="ResourceRedirector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
