Several ExtensibleSaveFormat changes
* Use PluginData class as mean of storage for plugins
* Hold weak references to ChaFile in internal dictionary
* Retrieve and store plugin data separated by plugin key
* Add WeakKeyDictionary and HashedWeakReference shared classes

TODO: add documentation

--- a/ExtensibleSaveFormat/ExtensibleSaveFormat.csproj
+++ b/ExtensibleSaveFormat/ExtensibleSaveFormat.csproj
@@ -51,7 +51,9 @@
   <ItemGroup>
     <Compile Include="ExtensibleSaveFormat.cs" />
     <Compile Include="Hooks.cs" />
+    <Compile Include="PluginData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
