Disable vanilla screenshot method

--- a/Screencap/Screencap.csproj
+++ b/Screencap/Screencap.csproj
@@ -21,6 +21,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>..\lib\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -41,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hooks.cs" />
     <Compile Include="Renderers\AlphaShot2.cs" />
     <Compile Include="CameraUtils.cs" />
     <Compile Include="Renderers\LegacyRenderer.cs" />
