--- a/Screencap/Screencap.csproj
+++ b/Screencap/Screencap.csproj
@@ -70,6 +70,12 @@
     <Compile Include="ScreenshotManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigurationManager\ConfigurationManager.csproj">
+      <Project>{d56dd83d-7471-463f-b4ff-8910a335833c}</Project>
+      <Name>ConfigurationManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF EXIST "$(TargetPath).mdb" del "$(TargetPath).mdb"
