Use new ILRepack nuget package

--- a/Sideloader/packages.config
+++ b/Sideloader/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILRepack.MSBuild.Task" version="1.0.9" targetFramework="net35" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.15.5" targetFramework="net35" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net35" />
 </packages>
