--- a/IPALoader/packages.config
+++ b/IPALoader/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILRepack.MSBuild.Task" version="1.0.9" targetFramework="net35" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.15.5" targetFramework="net35" />
 </packages>
