--- a/BGMLoader/ILRepack.targets
+++ b/BGMLoader/ILRepack.targets
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Target Name="ILRepacker" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
+  <Target Name="ILRepacker" AfterTargets="Build">
 		<Move SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFiles="$(OutputPath)\$(AssemblyName)1.dll" />
 
 		<ItemGroup>
@@ -21,5 +21,5 @@
 		/>
 
 		<Delete Files="@(InputAssemblies)" />
-    </Target>
+  </Target>
 </Project>
